# ecwam_gpu

./: CMakeLists.txt  LICENSE  README.md
interface/: abort1.intfb.h  adjust.intfb.h  airsea.intfb.h  aki.intfb.h  aki_ice.intfb.h  alphap_tail.intfb.h  bouinpt.intfb.h  buildstress.intfb.h  cal_second_order_spec.intfb.h  cdustarz0.intfb.h  check.intfb.h  checkcfl.intfb.h  chkoops.intfb.h  chnkmin.intfb.h  cigetdeac.intfb.h  cimsstrn.intfb.h  cireduce.intfb.h  ciwabr.intfb.h  ciwaf.intfb.h  ctuw.intfb.h  ctuwdrv.intfb.h  ctuwini.intfb.h  ctuwupdt.intfb.h  current2wam.intfb.h  difdate.intfb.h  dominant_period.intfb.h  expand_string.intfb.h  femean.intfb.h  femeanws.intfb.h  file_transfer.intfb.h  findb.intfb.h  fkmean.intfb.h  fldinter.intfb.h  fndprt.intfb.h  frcutindex.intfb.h  get_preset_wgrib_template.intfb.h  getcurr.intfb.h  getfrstwnd.intfb.h  getspec.intfb.h  getstress.intfb.h  (+211 more)
src/ecwam/: CMakeLists.txt  airsea.scc.F90  aki_ice.scc.F90  bouinpt.F90  buildstress.F90  checkcfl_scc.F90  chnkmin.scc.F90  cigetdeac.F90  cimsstrn.scc.F90  cireduce_scc.F90  ciwabr.scc.F90  ciwaf_scc.F90  ctuw_scc.F90  ctuwdrv_scc.F90  ctuwini_scc.F90  ctuwupdt_scc.F90  diff.txt  femeanws.scc.F90  field_module.F90  fkmean.scc.F90  frcutindex.scc.F90  getspec.F90  gradi_scc.F90  halphap.scc.F90  imphftail.scc.F90  implsch.scc.F90  implsch.scc.F90_back  mpdistribfl.F90  mpdistribscfld.F90  mpexchng.F90  mpfldtoifs.F90  mpgatherbc.F90  mpuserin.F90  newwind_scc.F90  ns_gc.scc.F90  outgrid.F90  outwspec.F90  peak_ang.scc.F90  prewind.F90  proenvhalo_scc.F90  (+52 more)
src/fypp/: diff.txt  field_definition.fypp  field_module.fypp  field_module.fypp_back  yowfield_definition.fypp  yowfield_mod.F90  yowfield_mod.fypp
src/module/: gpuObj_mod.F90  mpexchng_mod.F90
src/programs/: chief.F90
src/util/: abor1.F90  cargs.c  cmpl_binding.F90  dr_hook_prt.F90  dr_hook_util.F90  drhook.c  ec_env.c  gentrbk.F90  ifstowam.F90  mpl_allgatherv_mod.F90  mpl_allreduce_mod.F90  mpl_alltoallv_mod.F90  mpl_broadcast_mod.F90  mpl_buffer_method_mod.F90  mpl_bytes_mod.F90  mpl_gatherv_mod.F90  mpl_groups.F90  mpl_init_mod.F90  mpl_message_mod.F90  mpl_module.F90  mpl_recv_mod.F90  mpl_scatterv_mod.F90  mpl_send_mod.F90  mpl_wait_mod.F90  mpl_waitany_mod.F90  parkind1.F90  yomgstats.F90  yomhook.F90  yomoml.F90
tests/: CMakeLists.txt
